# ACPTests

./: .gitignore  AGENTS.md  Makefile  README.md  acp-hub-echo-test.json  acp-hub.example.json  main.py  pyproject.toml  pyrightconfig.json  uv.toml
docs/plans/: 2026-02-09-acp-hub-design.md  2026-02-09-acp-hub-implementation-plan.md
docs/references/: README.md  acp-agent-client-protocol.md  codex-app-server.md  codex-cli-help.md  copilot-acp-server.md  copilot-cli-help.md
src/acp_hub/: __main__.py  bus.py  cli.py  config.py  events.py  fs_watch.py  hub.py  journal.py  proc.py  router.py
src/acp_hub/protocols/: __init__.py  acp.py  base.py  codex.py  echo.py
src/acp_hub/tools/: __init__.py  files.py  runner.py  shell.py
src/acp_hub/tui/: run.py
tests/: test_acp_adapter_unittest.py  test_bus_unittest.py  test_cli_unittest.py  test_config_unittest.py  test_events_unittest.py  test_files_unittest.py  test_journal_unittest.py  test_proc_unittest.py  test_router_unittest.py  test_tool_runner_unittest.py  test_tools_shell_unittest.py
vernhole/: 01-retro.md  02-enterprise.md  03-great.md  04-architect.md  05-ux.md  06-inverse.md  synthesis.md
