[project]
name = "acp-hub"
version = "0.1.0"
description = "Multi-agent ACP hub for Codex + Copilot (stdio)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # Protocol + stdio JSON-RPC plumbing (ACP).
    "agent-client-protocol",
    # TUI + rendering.
    "textual",
    # File-change monitoring.
    "watchfiles",
]

[project.scripts]
acp-hub = "acp_hub.cli:main"

[dependency-groups]
dev = [
    "pre-commit",
    "pyright",
    "pytest",
    "pytest-asyncio",
    "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/acp_hub"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]

[tool.ruff.lint.isort]
known-first-party = ["acp_hub"]
